# framecat

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  api.md  index.html  objects.inv  pyproject.toml  searchindex.js
.doctrees/: docs.doctree  environment.pickle  index.doctree  quickstart.doctree
.doctrees/api/framecat/: index.doctree
.doctrees/api/framecat/cli/: index.doctree
.doctrees/api/framecat/cli_interface/: index.doctree
.doctrees/api/framecat/rendering/: index.doctree
.doctrees/api_reference/: cli_interface.doctree  rendering.doctree
.doctrees/reference/api/: cli_interface.doctree  index.doctree  rendering.doctree
.github/workflows/: build.yml  docs.yml
_modules/: index.html
_modules/framecat/cli/: index.html
_modules/framecat/cli_interface/: index.html
_modules/framecat/rendering/: index.html
_sources/: docs.md.txt  index.md.txt  quickstart.md.txt
_sources/api/framecat/: index.rst.txt
_sources/api/framecat/cli/: index.rst.txt
_sources/api/framecat/cli_interface/: index.rst.txt
_sources/api/framecat/rendering/: index.rst.txt
api/framecat/: index.html
api/framecat/cli/: index.html
api/framecat/cli_interface/: index.html
api/framecat/rendering/: index.html
api_reference/cli_interface/: index.html
api_reference/rendering/: index.html
assets/: demo.tar  demo_odd.tar
cli/: render.py
docs/: README.md  api.md  api.rst  conf.py  conf_og.py  docs.md  index.html  index.md  index_framecat.md  tree_gh.py  tree_local.py
docs/_pygments/: style.py
docs/source/: conf.py  docs.md  index.md
docs/source/api_reference/: cli_interface.rst
docs/source/reference/api/: index.rst  rendering.rst
example/: demo.py  demo_video.py
genindex/: index.html
py-modindex/: index.html
quickstart/: index.html
reference/api/: index.html
reference/api/cli_interface/: index.html
reference/api/rendering/: index.html
search/: index.html
src/framecat/: cli.py  command.py  copy.py  rendering.py  utils.py
test/: test_cli.py  test_rendering.py  test_utils.py
