[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "framecat"
version = "0.1.9"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Simon le Cleac'h", email = "simonlch.edu@gmail.com"},
]

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "colorlog>=6.8.2",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]

# Documentation related packages
dev = [
    "PyYAML>=6.0",
    "frozendict>=2.3.4",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "omegaconf>=2.2.2",
    "attrs>=21.4.0",
    "torch>=1.10.0",
    "pyright>=1.1.349,!=1.1.379",
    "ruff>=0.1.13",
    "mypy>=1.4.1",
    "numpy>=1.20.0",
    # As of 7/27/2023, flax install fails for Python 3.7 without pinning to an
    # old version. But doing so breaks other Python versions.
    "flax>=0.6.9;python_version>='3.8'",
    "pydantic>=2.5.2",
    "coverage[toml]>=6.5.0",
    "eval_type_backport>=0.1.3",
]


# "git+https://github.com/brentyi/ansi.git",
# "git+https://github.com/brentyi/sphinxcontrib-programoutput.git",

[tool.coverage.run]
source = ["./src/framecat"]


[project.scripts]
framecat = "framecat.cli:main"
