[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "framecat"
version = "0.1.9"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Simon le Cleac'h", email = "simonlch.edu@gmail.com"},
]

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "colorlog>=6.8.2",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]

[tool.coverage.run]
source = ["./src/framecat"]


[project.scripts]
framecat = "framecat.cli:main"
